# ml-from-scratch

./: .gitignore  README.md  pyproject.toml
notebooks/: graident_descent_explained.ipynb
notebooks/01_linear_regression/: linear_regression.ipynb
notebooks/01_linear_regression/utils/: helpers.py
notebooks/02_multiple_linear_regression/: multiple_linear_regression.ipynb
notebooks/02_multiple_linear_regression/utils/: helpers.py  plotting.py
notebooks/gradient_descent/: graident_descent_explained.ipynb  linear_regression_demo.ipynb
notebooks/gradient_descent/utils/: helpers.py  plotting.py
notebooks/utils/: helpers.py  plotting.py
src/ml_from_scratch/: linear_regression.py  multiple_linear_regression.py  univariate_linear_regression.py
tests/: test_linear_regression.py  test_multiple_linear_regression.py  test_univariate_linear_regression.py
