[project]
name = "ml-from-scratch"
version = "0.1.0"
description = "Machine learning algorithms implemented from scratch with NumPy."
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "jupyter",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]